ls: add z-index to #main-content to solve footer overlap (WHD #514041)

--- a/middlebury.edu/2010/css/ls.css
+++ b/middlebury.edu/2010/css/ls.css
@@ -16,6 +16,9 @@ form.search {
 .taskbar,.breadcrumb {
   display:none;
 }
+#main-content {
+  z-index:1;
+}
 /*
 .column>a,
 .column .content>a {
